--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,9 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
+               about.html,\
                plugin.xml,\
+               about_files/,\
                gettingStarted/,\
                contexts_IMP.xml,\
                concepts/,\
